force-app/main/default/objects/Expertise__c/Expertise__c.object-meta.xml
<CustomObject>
    <description>1. Not integration relevant
2. ZRD
3. SF-726</description>
    <label>Fachkompetenz</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Expertise Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fachkompetenzen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>