force-app/main/default/objects/Expertise__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-726</description>
    <label>Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FT</fullName>
                <label>Access Equipment (AE)</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <label>Accommodation Units (AU)</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Agriculture machines (AM)</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Construction Equipment (CE)</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Construction Tools (CT)</label>
            </value>
            <value>
                <fullName>EE</fullName>
                <label>Electric &amp; Energy (EE)</label>
            </value>
            <value>
                <fullName>Expertise 3</fullName>
                <isActive>false</isActive>
                <label>Expertise 3</label>
            </value>
            <value>
                <fullName>IE</fullName>
                <label>Industrial Equipment (IE)</label>
            </value>
            <value>
                <fullName>LC</fullName>
                <label>Logistics Consulting &amp; Management (LC)</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Sanitary Systems (SA)</label>
            </value>
            <value>
                <fullName>ET</fullName>
                <label>Spare Parts (SP)</label>
            </value>
            <value>
                <fullName>ZH</fullName>
                <label>Tower Cranes (TC)</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <label>Traffic Safety (TS)</label>
            </value>
            <value>
                <fullName>FZ</fullName>
                <label>Vehicles (VH)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>