force-app/main/default/objects/Expertise__c/fields/Number_of_Assignees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assignees__c</fullName>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <label>Number of Assignees</label>
    <summaryForeignKey>Expertise_Assignment__c.Expertise__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>