force-app/main/default/objects/Expertise__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper field to display the Name of the Expertise instead of the Auto Number</description>
    <formula>HYPERLINK(&quot;/lightning/r/Expertise__c/&quot;+  Id  +&quot;/view&quot;,  IMAGE(&quot;/img/chatter/lookupSearchHover.png&quot;, &quot;OPEN&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open</label>
    <type>Text</type>
</CustomField>