force-app/main/default/objects/Expertise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Expertise__c</columns>
    <columns>Number_of_Assignees__c</columns>
    <columns>Open__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>